# rust_learning

./: .env  Cargo.toml  README.md
src/: lib.rs  main.rs
src/routes/: hello_world.rs  mod.rs  path_variables.rs  return_201.rs  set_extension.rs  upload_file.rs
